--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -166,7 +166,7 @@
                         {{/if}}
                     </div>
 
-                    <h1 class="menu-title"><img src="ieicon.png" alt="Iron Engine" width="32"></h1>
+                    <h1 class="menu-title"><img src="/docs/ieicon.png" alt="Iron Engine" width="32"></h1>
 
                     <div class="right-buttons">
                         {{#if print_enable}}
