--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -8,7 +8,7 @@
     --page-padding: 15px;
     --content-max-width: 750px;
     --menu-bar-height: 50px;
-    --mono-font: "Open Sans";
+    --mono-font: "Courier New";
     --code-font-size: 0.73em /* please adjust the ace font size accordingly in editor.js */
 }
 
